# CSC1061Capstone

./: CMakeLists.txt  CONSOLE.cpp  CONSOLE.h  CaveGeneration.cpp  CaveGeneration.h  README.md  WorldGen.cpp  WorldGen.h  main.cpp  rect.cpp  rect.h  vector2.cpp  vector2.h
Documentation/: CONSOLE.h.md  CaveGeneration.h.md  WorldGen.h.md
Tools/: Colors.h  File.cpp  File.h  InputKey.h  InputManager.cpp  InputManager.h  SaveState.h  Tag.cpp  Tag.h  Tile.h  TileMap.cpp  TileMap.h  Tiles.h
game/: EventManager.cpp  EventManager.h  EventTile.h  ItemManager.cpp  ItemManager.h  PlayerFlags.h  TileData.cpp  TileData.h  Tiles.cpp  Tiles.h  alertBox.cpp  alertBox.h  crafting.cpp  crafting.h  debugMenu.cpp  debugMenu.h  inventory.cpp  inventory.h  item.cpp  item.h  itemType.h  item_drop_engine.cpp  item_drop_engine.h  mainMenu.cpp  mainMenu.h  player.cpp  player.h  window.cpp  window.h
game/items/: coal.h  dirt.h  iron.h  ironIngot.h  iron_hatchet.h  iron_pickaxe.h  itemType.h  ladder.h  logs.h  nullItem.h  planks.h  stick.h  stone.h  stone_brick.h  stone_hatchet.h  stone_pickaxe.h
game/tiles/: TIle_StoneBrick.h  TileTypes.h  Tile_Boulder.h  Tile_BuildMode.h  Tile_CoalOre.h  Tile_Dirt.h  Tile_Forest.h  Tile_Grass.h  Tile_IndestructibleStone.h  Tile_IronOre.h  Tile_Mineshaft.h  Tile_Planks.h  Tile_Player.h  Tile_Sand.h  Tile_Stone.h  Tile_Unknown.h  Tile_Water.h
